--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-<h1>Hello</h1>
-<h2>Boss Naga</h2>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Boo</title>
+    <script src="./js/index.js" defer></script>
+  </head>
+
+  <body>
+    <form action="page2.html">
+      First Name<input type="text" name="first-name">
+      <input type="submit" value="Submit">
+    </form>		
+  </body>
+</html>
