--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,17 @@
+<body>
 <h1>This is the second page</h1>
+
+<button>Next</button>
+
+<script>
+  console.log("Hello")
+  var btn = document.querySelector('button');
+  btn.addEventListener('click', function(e) {
+  	// e.preventDefault;
+    console.log("hello")
+  	window.location.href = "page3.html"
+
+  })
+</script>
+</body>
+
